--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!doctype html>
+<html class="no-js" lang="">
+  <head>
+      <meta charset="utf-8">
+  </head>
+  <body>
+    <h1>Hello, World</h1>
+  </body>
+</html>
