--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
   <head>
-      <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Adam Giese by adamgiese</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-    <h1>Hello, World</h1>
+    <div class="wrapper">
+      <header>
+        <h1>Adam Giese</h1>
+        <p>Front-End Developer</p>
+
+
+        <p class="view"><a href="https://github.com/adamgiese">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h1>
+<a id="howdy" class="anchor" href="#howdy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Howdy.</h1>
+
+<h2>
+<a id="who-am-i" class="anchor" href="#who-am-i" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Who Am I?</h2>
+
+<p>I am the Senior Web Developer at <a href="http://intelechygroup.com">Intelechy Group</a> in Austin, TX. </p>
+
+<h2>
+<a id="what-can-i-do" class="anchor" href="#what-can-i-do" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Can I Do?</h2>
+
+<p>I can create kickass WordPress themes! Working with <a href="http://themodstudio.com">The MOD Studio</a>, a partner of Intelechy Group, I have worked on WordPress themes for many different clients and industries. </p>
+
+<p>I am getting my feet wet with Jekyll, and I am <em>loving</em> it! While I do not have any professional examples (yet), I am currently creating a Jekyll theme where this site will eventually live.</p>
+
+<h2>
+<a id="more-is-on-the-way" class="anchor" href="#more-is-on-the-way" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>More Is On The Way!</h2>
+
+<p>This site is a placeholder! I will be populating this with blog posts, portfolio pages, and more!</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
